# faq-account-assistant

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: faq_seed.json
infra/: Dockerfile  docker-compose.yaml
infra/env/: .env.docker.example
scripts/: init_db.py  init_db_prod.py  seed_faq.py  update_all_embeddings.py  update_null_embeddings.py
src/api/: main.py
src/api/routers/: ask.py
src/core/: celery_app.py  errors.py  logging.py  settings.py
src/db/: session.py
src/models/: ask.py
src/services/: openai_embed.py  openai_fallback.py  router.py  similarity.py
src/vectorstore/: models.py
tests/unit/: conftest.py  test_ask_scaffold.py  test_core_celery_app.py  test_core_errors.py  test_service_ask_fallback.py  test_service_ask_local.py  test_service_ask_non_it.py  test_service_auth.py  test_service_models_import.py  test_service_openai_embed.py  test_service_openai_fallback.py  test_service_router.py  test_service_similarity.py
