[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "faq-account-assistant"
version = "0.1.0"
description = "Semantic FAQ assistant with OpenAI fallback"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary,pool]>=3.2.3",
  "pgvector>=0.3.3",
  "alembic>=1.14.0",
  "langchain>=1.0.2",
  "langchain-openai==1.0.1",
  "openai>=1.51.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "python-json-logger>=2.0.7",
  "prometheus-client>=0.21.0",
  "celery[redis]>=5.4.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "black>=24.10.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","ANN","C90","SIM","RUF"]
ignore = ["ANN101","ANN102","ANN401"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
strict_optional = true
no_implicit_optional = true
pretty = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing -q"
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
